fix(catalog): 修复属性 JSON 持久化兼容性
将目录属性的持久化模型改为普通 Java JSON 值，兼容 Spring Boot 4 的 Jackson 3 Web 层与 Hibernate 7.2 的 Jackson 2 JSON mapper。\n\n新增阶段三目录位置端到端验收，覆盖分类属性、位置层级、物品创建、搜索与归档链路。